src/components/Footer/Footer.css
footer {
    color: #e0e0e0;
    width: 100%;
    font-size: 1rem;
    z-index: 100;
    transition: var(--card-transition);
}

.bottom {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 1200px;
    padding: 10px;

    margin: 0 auto;
}

.text-wrapper p {
    margin: 0;
    text-align: center;
    color: var(--text-color);
    letter-spacing: 0.5px;
}

